--- a/bin/strap.sh.example
+++ b/bin/strap.sh.example
@@ -3,32 +3,16 @@
 #/ Install development dependencies on macOS.
 set -e
 
-
-STRAP_BASE_PATH="$( cd "$( dirname "${BASH_SOURCE[0]}" )/.." >/dev/null && pwd )"
-echo $STRAP_BASE_PATH
-. "$STRAP_BASE_PATH/commands/common.sh"
-. "$STRAP_BASE_PATH/commands/bundle_brewfile.sh"
-. "$STRAP_BASE_PATH/commands/setup_docker.sh"
-. "$STRAP_BASE_PATH/commands/finish_rbenv_setup.sh"
-. "$STRAP_BASE_PATH/commands/finish_nodenv_setup.sh"
-. "$STRAP_BASE_PATH/commands/setup_puma.sh"
-
 [ "$1" = "--debug" ] && STRAP_DEBUG="1"
->>>>>>> Update Brewfile:bin/strap
 STRAP_SUCCESS=""
-
-sudo_askpass() {
-  if [ -n "$SUDO_ASKPASS" ]; then
-    sudo --askpass "$@"
-  else
-    sudo "$@"
-  fi
-}
 
 cleanup() {
   set +e
-  sudo_askpass rm -rf "$CLT_PLACEHOLDER" "$SUDO_ASKPASS" "$SUDO_ASKPASS_DIR"
-  sudo --reset-timestamp
+  if [ -n "$STRAP_SUDO_WAIT_PID" ]; then
+    sudo kill "$STRAP_SUDO_WAIT_PID"
+  fi
+  sudo -k
+  rm -f "$CLT_PLACEHOLDER"
   if [ -z "$STRAP_SUCCESS" ]; then
     if [ -n "$STRAP_STEP" ]; then
       echo "!!! $STRAP_STEP FAILED" >&2
@@ -66,100 +50,36 @@ STRAP_ISSUES_URL='https://github.com/MikeMcQuaid/strap/issues/new'
 
 # We want to always prompt for sudo password at least once rather than doing
 # root stuff unexpectedly.
-sudo --reset-timestamp
-
-# functions for turning off debug for use when handling the user password
-clear_debug() {
-  set +x
-}
-
-reset_debug() {
-  if [ -n "$STRAP_DEBUG" ]; then
-    set -x
-  fi
-}
+sudo -k
 
 # Initialise (or reinitialise) sudo to save unhelpful prompts later.
 sudo_init() {
-  if [ -z "$STRAP_INTERACTIVE" ]; then
-    return
+  if ! sudo -vn &>/dev/null; then
+    if [ -n "$STRAP_SUDOED_ONCE" ]; then
+      echo "--> Re-enter your password (for sudo access; sudo has timed out):"
+    else
+      echo "--> Enter your password (for sudo access):"
+    fi
+    sudo /usr/bin/true
+    STRAP_SUDOED_ONCE="1"
   fi
-
-  local SUDO_PASSWORD SUDO_PASSWORD_SCRIPT
-
-  if ! sudo --validate --non-interactive &>/dev/null; then
-    while true; do
-      read -rsp "--> Enter your password (for sudo access):" SUDO_PASSWORD
-      echo
-      if sudo --validate --stdin 2>/dev/null <<<"$SUDO_PASSWORD"; then
-        break
-      fi
-
-      unset SUDO_PASSWORD
-      echo "!!! Wrong password!" >&2
-    done
-
-    clear_debug
-    SUDO_PASSWORD_SCRIPT="$(cat <<BASH
-#!/bin/bash
-echo "$SUDO_PASSWORD"
-BASH
-)"
-    unset SUDO_PASSWORD
-    SUDO_ASKPASS_DIR="$(mktemp -d)"
-    SUDO_ASKPASS="$(mktemp "$SUDO_ASKPASS_DIR"/strap-askpass-XXXXXXXX)"
-    chmod 700 "$SUDO_ASKPASS_DIR" "$SUDO_ASKPASS"
-    bash -c "cat > '$SUDO_ASKPASS'" <<<"$SUDO_PASSWORD_SCRIPT"
-    unset SUDO_PASSWORD_SCRIPT
-    reset_debug
-
-    export SUDO_ASKPASS
-  fi
-}
-
-sudo_refresh() {
-  clear_debug
-  if [ -n "$SUDO_ASKPASS" ]; then
-    sudo --askpass --validate
-  else
-    sudo_init
-  fi
-  reset_debug
 }
 
 abort() { STRAP_STEP="";   echo "!!! $*" >&2; exit 1; }
-log()   { STRAP_STEP="$*"; sudo_refresh; echo "--> $*"; }
-logn()  { STRAP_STEP="$*"; sudo_refresh; printf -- "--> %s " "$*"; }
+log()   { STRAP_STEP="$*"; sudo_init; echo "--> $*"; }
+logn()  { STRAP_STEP="$*"; sudo_init; printf -- "--> %s " "$*"; }
 logk()  { STRAP_STEP="";   echo "OK"; }
 escape() {
   printf '%s' "${1//\'/\'}"
 }
 
-# Given a list of scripts in the dotfiles repo, run the first one that exists
-run_dotfile_scripts() {
-  if [ -d ~/.dotfiles ]; then
-    (
-      cd ~/.dotfiles
-      for i in "$@"; do
-        if [ -f "$i" ] && [ -x "$i" ]; then
-          log "Running dotfiles $i:"
-          if [ -z "$STRAP_DEBUG" ]; then
-            "$i" 2>/dev/null
-          else
-            "$i"
-          fi
-          break
-        fi
-      done
-    )
-  fi
+MACOS_VERSION="$(sw_vers -productVersion)"
+echo "$MACOS_VERSION" | grep $Q -E "^10.(9|10|11|12|13|14)" || {
+  abort "Run Strap on macOS 10.9/10/11/12/13/14."
 }
 
 [ "$USER" = "root" ] && abort "Run Strap as yourself, not root."
-groups | grep $Q -E "\b(admin)\b" || abort "Add $USER to the admin group."
-
-# Prevent sleeping during script execution, as long as the machine is on AC power
-caffeinate -s -w $$ &
+groups | grep $Q admin || abort "Add $USER to the admin group."
 
 # Set some basic security settings.
 logn "Configuring security settings:"
@@ -171,13 +91,13 @@ defaults write com.apple.Safari \
   -bool false
 defaults write com.apple.screensaver askForPassword -int 1
 defaults write com.apple.screensaver askForPasswordDelay -int 0
-sudo_askpass defaults write /Library/Preferences/com.apple.alf globalstate -int 1
-sudo_askpass launchctl load /System/Library/LaunchDaemons/com.apple.alf.agent.plist 2>/dev/null
+sudo defaults write /Library/Preferences/com.apple.alf globalstate -int 1
+sudo launchctl load /System/Library/LaunchDaemons/com.apple.alf.agent.plist 2>/dev/null
 
 if [ -n "$STRAP_GIT_NAME" ] && [ -n "$STRAP_GIT_EMAIL" ]; then
   LOGIN_TEXT=$(escape "Found this computer? Please contact $STRAP_GIT_NAME at $STRAP_GIT_EMAIL.")
   echo "$LOGIN_TEXT" | grep -q '[()]' && LOGIN_TEXT="'$LOGIN_TEXT'"
-  sudo_askpass defaults write /Library/Preferences/com.apple.loginwindow \
+  sudo defaults write /Library/Preferences/com.apple.loginwindow \
     LoginwindowText \
     "$LOGIN_TEXT"
 fi
@@ -193,7 +113,7 @@ elif [ -n "$STRAP_CI" ]; then
 elif [ -n "$STRAP_INTERACTIVE" ]; then
   echo
   log "Enabling full-disk encryption on next reboot:"
-  sudo_askpass fdesetup enable -user "$USER" \
+  sudo fdesetup enable -user "$USER" \
     | tee ~/Desktop/"FileVault Recovery Key.txt"
   logk
 else
@@ -206,16 +126,33 @@ if ! [ -f "/Library/Developer/CommandLineTools/usr/bin/git" ]
 then
   log "Installing the Xcode Command Line Tools:"
   CLT_PLACEHOLDER="/tmp/.com.apple.dt.CommandLineTools.installondemand.in-progress"
-  sudo_askpass touch "$CLT_PLACEHOLDER"
+  sudo touch "$CLT_PLACEHOLDER"
+
+  # shellcheck disable=SC2086,SC2183
+  printf -v MACOS_VERSION_NUMERIC "%02d%02d%02d" ${MACOS_VERSION//./ }
+  if [ "$MACOS_VERSION_NUMERIC" -ge "100900" ] &&
+     [ "$MACOS_VERSION_NUMERIC" -lt "101000" ]
+  then
+    CLT_MACOS_VERSION="Mavericks"
+  else
+    CLT_MACOS_VERSION="$(echo "$MACOS_VERSION" | grep -E -o "10\\.\\d+")"
+  fi
+  if [ "$MACOS_VERSION_NUMERIC" -ge "101300" ]
+  then
+    CLT_SORT="sort -V"
+  else
+    CLT_SORT="sort"
+  fi
 
   CLT_PACKAGE=$(softwareupdate -l | \
-                grep -B 1 "Command Line Tools" | \
-                awk -F"*" '/^ *\*/ {print $2}' | \
-                sed -e 's/^ *Label: //' -e 's/^ *//' | \
-                sort -V |
+                grep -B 1 -E "Command Line (Developer|Tools)" | \
+                awk -F"*" '/^ +\*/ {print $2}' | \
+                sed 's/^ *//' | \
+                grep "$CLT_MACOS_VERSION" |
+                $CLT_SORT |
                 tail -n1)
-  sudo_askpass softwareupdate -i "$CLT_PACKAGE"
-  sudo_askpass rm -f "$CLT_PLACEHOLDER"
+  sudo softwareupdate -i "$CLT_PACKAGE"
+  sudo rm -f "$CLT_PLACEHOLDER"
   if ! [ -f "/Library/Developer/CommandLineTools/usr/bin/git" ]
   then
     if [ -n "$STRAP_INTERACTIVE" ]; then
@@ -235,7 +172,7 @@ xcode_license() {
   if /usr/bin/xcrun clang 2>&1 | grep $Q license; then
     if [ -n "$STRAP_INTERACTIVE" ]; then
       logn "Asking for Xcode license confirmation:"
-      sudo_askpass xcodebuild -license
+      sudo xcodebuild -license
       logk
     else
       abort "Run 'sudo xcodebuild -license' to agree to the Xcode license."
@@ -285,21 +222,21 @@ logk
 logn "Installing Homebrew:"
 HOMEBREW_PREFIX="$(brew --prefix 2>/dev/null || true)"
 [ -n "$HOMEBREW_PREFIX" ] || HOMEBREW_PREFIX="/usr/local"
-[ -d "$HOMEBREW_PREFIX" ] || sudo_askpass mkdir -p "$HOMEBREW_PREFIX"
+[ -d "$HOMEBREW_PREFIX" ] || sudo mkdir -p "$HOMEBREW_PREFIX"
 if [ "$HOMEBREW_PREFIX" = "/usr/local" ]
 then
-  sudo_askpass chown "root:wheel" "$HOMEBREW_PREFIX" 2>/dev/null || true
+  sudo chown "root:wheel" "$HOMEBREW_PREFIX" 2>/dev/null || true
 fi
 (
   cd "$HOMEBREW_PREFIX"
-  sudo_askpass mkdir -p               Cellar Frameworks bin etc include lib opt sbin share var
-  sudo_askpass chown -R "$USER:admin" Cellar Frameworks bin etc include lib opt sbin share var
+  sudo mkdir -p               Cellar Frameworks bin etc include lib opt sbin share var
+  sudo chown -R "$USER:admin" Cellar Frameworks bin etc include lib opt sbin share var
 )
 
 HOMEBREW_REPOSITORY="$(brew --repository 2>/dev/null || true)"
 [ -n "$HOMEBREW_REPOSITORY" ] || HOMEBREW_REPOSITORY="/usr/local/Homebrew"
-[ -d "$HOMEBREW_REPOSITORY" ] || sudo_askpass mkdir -p "$HOMEBREW_REPOSITORY"
-sudo_askpass chown -R "$USER:admin" "$HOMEBREW_REPOSITORY"
+[ -d "$HOMEBREW_REPOSITORY" ] || sudo mkdir -p "$HOMEBREW_REPOSITORY"
+sudo chown -R "$USER:admin" "$HOMEBREW_REPOSITORY"
 
 if [ $HOMEBREW_PREFIX != $HOMEBREW_REPOSITORY ]
 then
@@ -308,12 +245,18 @@ fi
 
 # Download Homebrew.
 export GIT_DIR="$HOMEBREW_REPOSITORY/.git" GIT_WORK_TREE="$HOMEBREW_REPOSITORY"
+[ -d "$GIT_DIR" ] && HOMEBREW_EXISTING="1"
 git init $Q
 git config remote.origin.url "https://github.com/Homebrew/brew"
 git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
-git fetch $Q --tags --force
+if [ -n "$HOMEBREW_EXISTING" ]
+then
+  git fetch $Q
+else
+  git fetch $Q --no-tags --depth=1 --force --update-shallow
+fi
 git reset $Q --hard origin/master
-unset GIT_DIR GIT_WORK_TREE
+unset GIT_DIR GIT_WORK_TREE HOMEBREW_EXISTING
 logk
 
 # Update Homebrew.
@@ -324,11 +267,11 @@ logk
 
 # Install Homebrew Bundle, Cask and Services tap.
 log "Installing Homebrew taps and extensions:"
-brew bundle --file=- <<RUBY
-tap 'homebrew/cask'
+brew bundle --file=- <<EOF
+tap 'caskroom/cask'
 tap 'homebrew/core'
 tap 'homebrew/services'
-RUBY
+EOF
 logk
 
 # Check and install any remaining software updates.
@@ -339,7 +282,7 @@ else
   echo
   log "Installing software updates:"
   if [ -z "$STRAP_CI" ]; then
-    sudo_askpass softwareupdate --install --all
+    sudo softwareupdate --install --all
     xcode_license
   else
     echo "Skipping software updates for CI"
@@ -362,7 +305,16 @@ if [ -n "$STRAP_GITHUB_USER" ]; then
         git pull $Q --rebase --autostash
       )
     fi
-    run_dotfile_scripts script/setup script/bootstrap
+    (
+      cd ~/.dotfiles
+      for i in script/setup script/bootstrap; do
+        if [ -f "$i" ] && [ -x "$i" ]; then
+          log "Running dotfiles $i:"
+          "$i" 2>/dev/null
+          break
+        fi
+      done
+    )
     logk
   fi
 fi
@@ -406,19 +358,9 @@ fi
 # Run a custom `brew` command
 if [ -n "$CUSTOM_BREW_COMMAND" ]; then
   log "Executing 'brew $CUSTOM_BREW_COMMAND':"
-  # shellcheck disable=SC2086
-  brew $CUSTOM_BREW_COMMAND
+  brew "$CUSTOM_BREW_COMMAND"
   logk
 fi
 
-# Run post-install dotfiles script
-run_dotfile_scripts script/strap-after-setup
-
-logstep "Bundle Brewfile" bundle_brewfile
-logstep "Setup Puma" setup_puma
-logstep "Setup Docker" setup_docker
-logstep "Finish Rbenv Setup" finish_rbenv_setup
-logstep "Finish Nodenv Setup" finish_nodenv_setup
-
 STRAP_SUCCESS="1"
-log "You are now Strap'd as F'!" "🏁" $GREEN
+log "Your system is now Strap'd!"
